# thingbot-telemetrix

./: .gitignore  README.md  main.py  pyproject.toml
examples/: analog_input.py  blink.py  dht_input.py  digital_input.py  thingbot_switch.py
thingbot_telemetrix/: __init__.py  private_constants.py  telemetrix.py  telemetrix_port_register.py
thingbot_telemetrix/handler/: dht_handler.py  gpio_handler.py  i2c_handler.py  thingbot_handler.py
