[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thingbot_telemetrix"
version = "1.0"
description = "ThingBot Telemetrix Python client for interacting with ThingBot hardware"
readme = "README.md"
authors = [ { name = "lgthevinh", email = "everwellmax@gmail.com" } ]
license = { text = "AGPL-3.0-or-later" }
keywords = ["iot", "arduino", "telemetry", "telemetrix"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5"
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"black",
	"isort",
	"mypy",
	"tomli",
]

[project.urls]
Homepage = "https://github.com/MEO-3/thingbot-telemetrix"
Repository = "https://github.com/MEO-3/thingbot-telemetrix"

[tool.setuptools.packages.find]
where = ["."]
include = ["thingbot_telemetrix*"]

[tool.setuptools]
license-files = []

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
